--- a/algorithms(PSFP).ipynb
+++ b/algorithms(PSFP).ipynb
@@ -5,15 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Traveling salesman problem"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Simulated annealing"
+    "# Permutation flowshop scheduling problem"
    ]
   },
   {
@@ -29,12 +21,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulated annealing"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- function for drawing the initial solution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#function for drawing the initial solution\n",
     "def random_shuffle(len_data):\n",
     "    listaMiast = list(range(1, len_data+1))\n",
     "    poczatkoweRozwiazanie = listaMiast.copy()\n",
@@ -43,12 +50,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- function summing up the time of performed tasks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#function summing up the time of performed tasks\n",
     "def timeSum(data, tasksOrder):    \n",
     "    columns = len(data[0])\n",
     "    rows = len(data)\n",
@@ -73,12 +87,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- a function that finds a new solution depending on the selected neighborhood"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#a function that finds a new solution depending on the selected neighborhood\n",
     "def solution(initialSolution, newSolution, neighborhood, list):\n",
     "    twoRandomList = random.sample(range(len(list)), 2)\n",
     "\n",
@@ -100,8 +121,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SA algorithm, parameters:\n",
+    "- data\n",
+    "- alpha - affects the rate of temperature reduction\n",
+    "- t - initial temperature\n",
+    "- trialsPerEpoch - number of trials in a given temperature\n",
+    "- tMin - minimal temperature, when it is reached, the algorithm ends\n",
+    "- neighborhood - the type of neighborhood (swap/inversion/insertion) "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,11 +169,11 @@
     "        if(sumSum > sum):\n",
     "            sumSum = sum\n",
     "            sumList = initialSolution\n",
-    "    print(\"Suma\", sum)\n",
-    "    print(\"Kolejność:\", initialSolution)\n",
+    "    print(\"Sum:\", sum)\n",
+    "    print(\"Order of tasks:\", initialSolution)\n",
     "    if(sumSum < sum):\n",
-    "        print(\"\\nMożliwa niższa suma\", sumSum)\n",
-    "        print(\"Kolejność:\", sumList)"
+    "        print(\"\\nPossible lower sum:\", sumSum)\n",
+    "        print(\"Order of tasks:\", sumList)"
    ]
   },
   {
@@ -153,19 +188,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- example of operation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example of operation\n",
     "data = [data50, data100, data200]\n",
     "\n",
     "for i in range(0,len(data)):\n",
-    "    print(\"======== Zestaw:\", i+1, \"========\")\n",
+    "    print(\"======== SET:\", i+1, \"========\")\n",
     "    n = 0\n",
     "    while n < 4:\n",
-    "        print(\"POWTORZENIE:\", n+1)    \n",
+    "        print(\"\\nREP:\", n+1)    \n",
     "        algorithm(data[i], 0.5, 500, 500, 10, \"SWAP\")\n",
     "        n += 1"
    ]
