--- a/algorithms(PSFP).ipynb
+++ b/algorithms(PSFP).ipynb
@@ -126,21 +126,21 @@
    "metadata": {},
    "source": [
     "SA algorithm, parameters:\n",
-    "- data\n",
-    "- alpha - affects the rate of temperature reduction\n",
-    "- t - initial temperature\n",
-    "- trialsPerEpoch - number of trials in a given temperature\n",
-    "- tMin - minimal temperature, when it is reached, the algorithm ends\n",
-    "- neighborhood - the type of neighborhood (swap/inversion/insertion) "
+    "- `data`\n",
+    "- `alpha` - affects the rate of temperature reduction\n",
+    "- `t` - initial temperature\n",
+    "- `trialsPerEpoch` - number of trials in a given temperature\n",
+    "- `tMin` - minimal temperature, when it is reached, the algorithm ends\n",
+    "- `neighborhood` - the type of neighborhood (swap/inversion/insertion) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def algorithm(data, alpha, t, trialsPerEpoch, tMin, neighborhood):\n",
+    "def simulatedAnnealing(data, alpha, t, trialsPerEpoch, tMin, neighborhood):\n",
     "    list = data.values.tolist()\n",
     "    initialSolution = random_shuffle(len(list))\n",
     "    sum = 499999\n",
@@ -208,7 +208,81 @@
     "    n = 0\n",
     "    while n < 4:\n",
     "        print(\"\\nREP:\", n+1)    \n",
-    "        algorithm(data[i], 0.5, 500, 500, 10, \"SWAP\")\n",
+    "        simulatedAnnealing(data[i], 0.5, 500, 500, 10, \"SWAP\")\n",
+    "        n += 1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hill climbing"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "HC algorithm, parameters:\n",
+    "- `data`\n",
+    "- `iterationsWithoutImprovement` - after reaching given number of interations without improvement the algoritms ends\n",
+    "- `neighborhood` - the type of neighborhood (swap/inversion/insertion)\n",
+    "- `iterations` - after reaching given number of iterations the algoritm ends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hillClimbing(data, iterationsWithoutImprovement, neighborhood, iterations):\n",
+    "    list = data.values.tolist()\n",
+    "    initialSolution = random_shuffle(len(list))\n",
+    "    iFlat = 0\n",
+    "    numberOfTrials = 0\n",
+    "    while iterationsWithoutImprovement!=iFlat and numberOfTrials!=iterations:\n",
+    "        newSolution = copy.deepcopy(initialSolution)\n",
+    "        solution(initialSolution, newSolution, neighborhood, list)\n",
+    "        \n",
+    "        newSum = timeSum(list, newSolution)\n",
+    "        oldSum = timeSum(list, initialSolution)\n",
+    "        if newSum >= oldSum:\n",
+    "            iFlat = iFlat+1\n",
+    "        else: \n",
+    "            initialSolution=newSolution\n",
+    "            oldSum=newSum\n",
+    "            iFlat=0\n",
+    "        numberOfTrials=numberOfTrials+1\n",
+    "\n",
+    "    print(\"Sum:\", newSum)\n",
+    "    print(\"Order of tasks:\", newSolution)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- example of operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [data50, data100, data200]\n",
+    "\n",
+    "for i in range(0,len(data)):\n",
+    "    print(\"======== SET:\", i+1, \"========\")\n",
+    "    n = 0\n",
+    "    while n < 4:\n",
+    "        print(\"\\nREP:\", n+1)    \n",
+    "        hillClimbing(data[i], 5000, \"SWAP\", 20000)\n",
     "        n += 1"
    ]
   }
