--- a/algorithms(PSFP).ipynb
+++ b/algorithms(PSFP).ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,16 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hillClimbing(data, iterationsWithoutImprovement, neighborhood, iterations):\n",
     "    list = data.values.tolist()\n",
     "    initialSolution = random_shuffle(len(list))\n",
+    "    sum = 0\n",
     "    iFlat = 0\n",
     "    numberOfTrials = 0\n",
-    "    while iterationsWithoutImprovement!=iFlat and numberOfTrials!=iterations:\n",
+    "    while iterationsWithoutImprovement != iFlat and numberOfTrials != iterations:\n",
     "        newSolution = copy.deepcopy(initialSolution)\n",
     "        solution(initialSolution, newSolution, neighborhood, list)\n",
     "        \n",
@@ -252,13 +253,13 @@
     "        if newSum >= oldSum:\n",
     "            iFlat = iFlat+1\n",
     "        else: \n",
-    "            initialSolution=newSolution\n",
-    "            oldSum=newSum\n",
-    "            iFlat=0\n",
-    "        numberOfTrials=numberOfTrials+1\n",
+    "            initialSolution = newSolution\n",
+    "            sum = newSum\n",
+    "            iFlat = 0\n",
+    "        numberOfTrials = numberOfTrials+1\n",
     "\n",
-    "    print(\"Sum:\", newSum)\n",
-    "    print(\"Order of tasks:\", newSolution)"
+    "    print(\"Sum:\", sum)\n",
+    "    print(\"Order of tasks:\", initialSolution)"
    ]
   },
   {
@@ -284,6 +285,118 @@
     "        print(\"\\nREP:\", n+1)    \n",
     "        hillClimbing(data[i], 5000, \"SWAP\", 20000)\n",
     "        n += 1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NEH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def timeSum2(data, tasksOrder):    \n",
+    "    columns = len(data[0])\n",
+    "    rows = len(tasksOrder)\n",
+    "\n",
+    "    #create an empty list (like in excels)\n",
+    "    listOfTasks=[[0]*columns for i in range(rows)]\n",
+    "\n",
+    "    #complete the list with the first row\n",
+    "    for i in range(columns):\n",
+    "        listOfTasks[0][i] = data[tasksOrder[0]-1][i]+listOfTasks[0][i-1]\n",
+    "\n",
+    "    #complete the list with the first column   \n",
+    "    for j in range(1, rows):\n",
+    "        listOfTasks[j][0] = data[tasksOrder[j]-1][0]+listOfTasks[j-1][0]\n",
+    "\n",
+    "    #complete the rest of the list items\n",
+    "    for i in range(1, columns):\n",
+    "        for j in range(1, rows):\n",
+    "            listOfTasks[j][i] = data[tasksOrder[j]-1][i] + max(listOfTasks[j-1][i], listOfTasks[j][i-1])\n",
+    "\n",
+    "    return listOfTasks[rows-1][columns-1]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NEH algorithm, parameters:\n",
+    "- `data`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def neh(data):\n",
+    "    summ = [[i + 1] * 2 for i in range(len(data))]\n",
+    "    for a in range(len(data)):\n",
+    "        summ[a][1] = sum(data[a])\n",
+    "    summ.sort(key = lambda x:x[-1], reverse = True)\n",
+    "    if(timeSum2(data, [summ[0][0], summ[1][0]]) > timeSum2(data, [summ[1][0], summ[0][0]])):\n",
+    "        order = [summ[1][0], summ[0][0]]\n",
+    "    else:\n",
+    "        order = [summ[0][0], summ[1][0]]\n",
+    "    for k in range(2,len(summ)):\n",
+    "        newOrder = copy.deepcopy(order)\n",
+    "        newTime = 999999\n",
+    "        for i in range(len(order) + 1):\n",
+    "            newOrder.insert(i, summ[k][0])\n",
+    "            if(timeSum2(data, newOrder) < newTime):\n",
+    "                newTime = timeSum2(data, newOrder)\n",
+    "                order=copy.deepcopy(newOrder)\n",
+    "            newOrder.remove(newOrder[i])\n",
+    "    dl = timeSum2(data, order)\n",
+    "    print(\"OrderOfTasks:\", order)\n",
+    "    print(\"Sum:\", dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df50 = data50.values.tolist()\n",
+    "df100 = data100.values.tolist()\n",
+    "df200 = data200.values.tolist()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- example of operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderOfTasks: [76, 91, 117, 19, 8, 31, 46, 129, 115, 18, 165, 48, 10, 110, 118, 99, 60, 126, 37, 6, 164, 61, 82, 147, 176, 130, 149, 113, 62, 20, 190, 189, 14, 137, 2, 144, 148, 9, 28, 141, 15, 57, 199, 157, 169, 64, 74, 43, 98, 21, 163, 63, 174, 16, 77, 86, 11, 111, 145, 44, 102, 73, 75, 133, 71, 154, 53, 121, 155, 140, 13, 1, 17, 24, 139, 30, 127, 80, 32, 41, 92, 40, 22, 69, 180, 93, 47, 51, 94, 183, 191, 175, 72, 114, 59, 182, 188, 7, 107, 192, 153, 200, 120, 151, 167, 89, 36, 68, 104, 171, 134, 26, 150, 12, 124, 178, 135, 197, 49, 81, 85, 78, 4, 27, 108, 112, 42, 173, 162, 119, 38, 142, 193, 196, 132, 143, 83, 160, 123, 156, 96, 187, 172, 177, 181, 23, 25, 158, 56, 97, 29, 65, 105, 84, 5, 166, 45, 170, 88, 35, 136, 55, 3, 70, 50, 168, 184, 79, 87, 161, 131, 109, 66, 34, 185, 106, 116, 159, 138, 95, 125, 186, 58, 198, 152, 194, 33, 103, 100, 52, 39, 128, 101, 67, 122, 54, 195, 179, 146, 90]\n",
+      "Sum: 10720\n"
+     ]
+    }
+   ],
+   "source": [
+    "neh(df200)"
    ]
   }
  ],
