Detailing in algorithms(PSFP).ipynb

--- a/algorithms(PSFP).ipynb
+++ b/algorithms(PSFP).ipynb
@@ -38,15 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def random_shuffle(len_data):\n",
-    "    listaMiast = list(range(1, len_data+1))\n",
-    "    poczatkoweRozwiazanie = listaMiast.copy()\n",
-    "    random.shuffle(poczatkoweRozwiazanie)\n",
-    "    return poczatkoweRozwiazanie"
+    "    startList = list(range(1, len_data+1))\n",
+    "    initialSolution = startList.copy()\n",
+    "    random.shuffle(initialSolution)\n",
+    "    return initialSolution"
    ]
   },
   {
